--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "googleapis": "^110.0.0",
     "koa": "^2.14.1",
+    "koa-bodyparser": "^4.3.0",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
     "koa-passport": "^5.0.0",
@@ -38,6 +39,7 @@
     "@tsconfig/node18-strictest": "^1.0.0",
     "@types/jest": "^27.5.1",
     "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-json": "^2.0.20",
     "@types/koa-logger": "^3.1.2",
     "@types/koa-passport": "^4.0.3",
