--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.1",
     "@hexlabs/env-vars-ts": "^1.0.10",
     "@line/bot-sdk": "^7.5.2",
     "acorn": "^8.8.1",
@@ -22,7 +23,8 @@
     "create-require": "^1.1.1",
     "diff": "^4.0.2",
     "dotenv": "^16.0.3",
-    "googleapis": "^110.0.0",
+    "google-auth-library": "^8.7.0",
+    "googleapis": "^105.0.0",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "koa-json": "^2.0.2",
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@tsconfig/node18-strictest": "^1.0.0",
+    "@types/gapi": "^0.0.44",
     "@types/jest": "^27.5.1",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.10",
