--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.1",
+    "@googleapis/calendar": "^3.0.0",
     "@hexlabs/env-vars-ts": "^1.0.10",
     "@line/bot-sdk": "^7.5.2",
     "acorn": "^8.8.1",
