renamed functions and cleaned up

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ MAX_LOG_LEVEL=info
 
 LINE_ACCESS_TOKEN=
 LINE_CHANNEL_SECRET=
+
+GOOGLE_CALENDAR_ID=
+
+MEMBER1_EMAIL=
+MEMBER2_EMAIL=
+MEMBER3_EMAIL=
